tests/golden/err-import-not-exported/expected_error.txt
error: `wrong` は `./lib` の公開名ではありません
 --> ./entry.clum:2:3
  |
2 |   wrong
  |   ^^^^^ import できるのは、そのディレクトリの窓口が `^@` で差し出した名前だけです
